# project-forge

./: .cursorrules  .gitignore  .lighthouserc.js  .mcp.json  .vercelignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  GEMINI.md  LICENSE  Makefile  PR.md  README.md  REVIEW.md  TESTING.md  build-engine.ps1  build_wasm.bat  build_wasm.ps1  build_wasm.sh  components.json  dev.ps1  package-lock.json  package.json  skills-lock.json  tsconfig.json  turbo.json
.changeset/: README.md  abort-signal-export.md  accessibility-keybinding-cleanup.md  adopt-changesets.md  ai-effort-non-chat-generators.md  ai-loading-abort.md  ai-opus-deep-tier.md  ai-response-cache.md  ai-sdk-6-0-158.md  anthropic-sdk-0.90.0.md  anthropic-sdk-088.md  anti-pattern-audit.md  api-contract-tests.md  api-route-standardization.md  api-route-test-coverage.md  auto-wire-generation-jobs.md  batch-mcp-tools.md  cargo-grid-rand-bump.md  cd-domain-preflight-check.md  centralize-constants.md  chat-executor-integration.md  chatstore-debounce-save.md  clerk-redirect-signin.md  config.json  credit-txn-cdn-resilience.md  db-transaction-wrapping.md  dep-upgrades-egui-react.md  dependabot-overrides.md  design-system-border-contrast.md  design-system-phase-b-a11y.md  design-system-phase-d-composites.md  e2-community-viral-growth.md  e2e-timeout-constants.md  eslint-hardcoded-colors.md  executor-coverage.md  extended-cache-ttl.md  fix-auto-iteration-stale-entity.md  fix-flaky-export-abort-test.md  fix-generate-3d-model-mode.md  fix-generation-store-sentry-noise.md  (+98 more)
.claude/: CLAUDE.md  TASKBOARD_SETUP.md  audit-log.md  plugin.json  settings.json
.claude-plugin/: plugin.json
.codex/: AGENTS.md  config.toml
.gemini/: settings.json
.github/: copilot-instructions.md  dependabot.yml
.transform-gizmo-fork/: Cargo.toml
.windsurf/: hooks.json
autoforge/: .env.example  README.md  autoforge.config.ts  package.json  program.md  tsconfig.json
benchmarks/: .gitignore
docs/: ARCHITECTURE-PLAN.md  SPEC-STANDARDS.md  VISION-ROADMAP.md  _meta.json  ai-gateway-research.md  ai-modules.md  competitive-analysis.md  coverage-plan.md  database-backup-restore.md  github-ai-tools-plan.md  go-to-market-strategy.md  index.md  known-limitations.md  production-support.md  sentry-alert-rules.md  testing-principles.md
engine/: Cargo.toml
engine/.cargo/: audit.toml
engine/src/: lib.rs
engine/src/bridge/: animation.rs  audio.rs  core_systems.rs  csg_system.rs  edit_mode.rs  events.rs  game.rs  material.rs  mesh_ops.rs  mod.rs  particles.rs  performance.rs  physics.rs  procedural.rs  query.rs  reparent.rs  scene_io.rs  scripts.rs  skeleton2d.rs  sprite.rs
engine/src/core/: animation.rs  animation_clip.rs  asset_manager.rs  audio.rs  blend_tree2d.rs  camera.rs  camera_2d.rs  camera_presets.rs  commands.rs  csg.rs  custom_wgsl.rs  edit_mode.rs  engine_mode.rs  entity_factory.rs  entity_id.rs  environment.rs  events.rs  game_camera.rs  game_components.rs  game_components_helpers.rs  gizmo.rs  history.rs  input.rs  lighting.rs  lod.rs  material.rs  mesh_simplify.rs  mod.rs  observability.rs  particles.rs  pending_commands.rs  physics.rs  physics_2d.rs  physics_2d_sim.rs  post_processing.rs  procedural_mesh.rs  project_type.rs  quality.rs  reparent.rs  reverb_zone.rs  (+15 more)
engine/src/core/commands/: animation.rs  audio.rs  edit_mode.rs  game.rs  material.rs  mod.rs  particles.rs  performance.rs  physics.rs  procedural.rs  scene.rs  sprites.rs  transform.rs
engine/src/core/pending/: animation.rs  audio.rs  edit_mode.rs  game.rs  material.rs  mod.rs  particles.rs  performance.rs  physics.rs  procedural.rs  query.rs  scene.rs  sprites.rs  transform.rs
engine/src/shaders/: custom_wgsl_template.wgsl  forge_effects.wgsl  mega_shader_stubs.wgsl
issues/: 1-resolution.md  1.md  pr2-cargo-audit-fix.patch  summary.md
mcp-server/: CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
scripts/: audit-command-coverage.ts  copilot-arch-check.sh  generate-wasm-manifests.sh  pitr-verify.mjs  pitr-verify.test.mjs  post-deploy-health-check.sh  run-benchmarks.sh  sentry-to-test-stub.ts  (+5 more)
(+2338 files in other folders)
