[package]
name = "forge-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
webgl2 = ["bevy/webgl2"]
webgpu = ["bevy/webgpu", "dep:bevy_hanabi"]
runtime = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
base64 = "0.22"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "=0.2.108"
serde-wasm-bindgen = "0.6"
console_error_panic_hook = "0.1"

[dependencies.bevy]
version = "0.18.1"
default-features = false
features = [
    "bevy_winit",
    "bevy_render",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_asset",
    "bevy_gizmos",
    "bevy_log",
    "bevy_post_process",
    "bevy_anti_alias",
    "tonemapping_luts",
    "bevy_picking",
    "mesh_picking",
    "gltf_animation",
    "bevy_gltf",
    "bevy_scene",
    "ktx2",
    "zstd_rust",
    "debug",
]

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
]

[target.'cfg(target_arch = "wasm32")'.dependencies.js-sys]
version = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.getrandom]
version = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.getrandom]
version = "0.3"
features = ["wasm_js"]

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.uuid]
version = "1.23"
features = ["v4"]

[target.'cfg(target_arch = "wasm32")'.dependencies.uuid]
version = "1.23"
features = ["v4", "js"]

[dependencies.transform-gizmo-bevy]
path = "../.transform-gizmo-fork/crates/transform-gizmo-bevy"

[dependencies.bevy_panorbit_camera]
version = "0.34"
default-features = false

[dependencies.bevy_rapier3d]
version = "0.33"
default-features = false
features = ["dim3", "async-collider", "debug-render-3d"]

[dependencies.bevy_rapier2d]
version = "0.33"
default-features = false
features = ["dim2", "debug-render-2d"]

[dependencies.bevy_hanabi]
version = "0.18"
optional = true
default-features = false
features = ["3d"]

[dependencies.csgrs]
version = "0.20"
default-features = false
features = ["f32", "earcut"]

[dependencies.noise]
version = "0.9"
default-features = false

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = false
